WIP: describe DHARMA procedure

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -148,7 +148,7 @@ Simulataneously, we randomly sampled 100 wind velocities in the direction of the
 The 100 resulting WALD kernels produced the seed probability density in the sector, and individual sectors were weighed by the frequency of corresponding wind directions (again, during the species' dispersal season).
 The wind data were obtained either from the nearest weather station (MET Norway), a 2.5 km resolution interpolated hindcast covering southern Norway [@haakenstad15yearHighResolution2017], or a 10 km resolution hindcast covering all of Norway [@reistadHighresolutionHindcastWind2011; @haakenstadNORA10EIRevisedRegional]. We used weather station data if the station was less than 2.5 or 10 km away (depending on hindcast coverage), or else the highest resolution hindcast.
 
-Both models of seed deposition density were expressed on a grid with a grain of 10 m, so dispersal kernels were applied to the distance from seed source to grid cell center. 
+Both estimates of seed deposition were expressed on a grid with a grain of 10 m, so dispersal kernels were applied to the distance from seed source to grid cell center. 
 Field-mapped polygons of seed sources were transformed into hexagonally gridded point sources, with a density of 0.1 m^-2^ for the first model and 0.01 m^-2^ for the second model (to reduce computation time). 
 Additional details about how data from different field campaigns were harmonized to model seed dispersal are explained in Appendix [A4].
 
@@ -165,34 +165,34 @@ knitr::include_graphics('figures/locality-example/locality-example.pdf')
 ```
 
 For our first analysis, we calculated wildling density per ecosystem type across all localities, by dividing the total number of wildings in that type by the total area of that type.
-Wildings in cells composed of multiple types were counted in proportion to cell's composition; for example, a cell with one wildling and half covered by a given type would tally 0.5 wildling for that type.
+Wildings in cells composed of multiple types were counted in proportion to cell's composition; for example, a cell with one wildling and half-covered by a given type would tally 0.5 wildling for that type.
 
 For our second analysis, we diagrammed causal relationships among the factors we hypothesized to influence the number of wildlings per cell in a directed acyclical graph (fig. \@ref(fig:DAG)).
 In it, the unmeasured, proximate causes of wildling number --- establishment probability and seed deposition, see eq. \@ref(eq:estmod) --- are decendants of variables that we could observe or model. 
-To estimate how ecosystem type affects wildlings, the directed acyclical graph mandated that we adjust for locality, climate, relative elevation, and seed deposition density in our regression model [@textorRobustCausalInference2016; @mcelreathHauntedDAGCausal2020].
-We did not need to adjust for plantation age (with locality in the model), but we included it as a covariate anyway because it could reduce the unexplained variance associated with locality, and because our causal structure would allow us to interpret its coefficient as an (unconfounded) total effect on wildling number [@westreichTableFallacyPresenting2013].
-Climate entered the model as mean annual temperature (Bio1) and precipitation of the coldest quarter (Bio19), at 30-arcsecond resolution, from the CHELSA data product [@kargerClimatologiesHighResolution2017].
+To estimate the causal influence of ecosystem type on wildlings, the directed acyclical graph dictated that we adjust for locality, climate, relative elevation, and seed deposition in our regression model [@textorRobustCausalInference2016; @mcelreathHauntedDAGCausal2020].
+We did not need to adjust for plantation age (with locality in the model), but we included it as a covariate anyway because it could reduce the unexplained variance associated with locality, and because our assumed causal structure would allow us to interpret its coefficient as an (unconfounded) total effect on wildling number [@westreichTableFallacyPresenting2013].
+Climate entered the regression model as mean annual temperature (Bio1) and precipitation of the coldest quarter (Bio19), at 30-arcsecond resolution, from the CHELSA data product [@kargerClimatologiesHighResolution2017].
 These two variables were chosen because they showed the strongest correlations with Norwegian vegetation zones and sections [@bakkestuenSteplessModelsRegional2008].
 Relative elevation was taken with respect to the highest point of the central plantation, from digital elevation models at 1 or 10 m resolution (Norwegian Mapping Authority).
+Lastly, plantation surroundings are likely to experience large stochastic variation in annual seed depostion, because seed release will concide with different wind conditions from year to year.
+Therefore we also included in our model the first order interaction between seed deposition and plantation age.
 
 ```{r DAG, fig.cap="A directed acyclical graph showing the causal relationships that we use as our point of departure for a statistical model of ecosystem effect on wildling establishment. Red variables causally affect both the ecosystem type and wildling establishment, blue variables causally affect only wildling establishment, and grey variables are unobserved. Green arrows show the causal pathway of interest."}
 knitr::include_graphics(here('ms', 'figures', 'dagitty-model.pdf'))
 ```
 
 For all species, the number of wildlings per cell showed a high frequency of zeros that was underestimated by the best fitting negative binomial distribution.
-Accordingly, we applied zero-inflated generalized linear models, which model zeros as the mixed product of a binomial process and a conditional count process [@zuurZeroTruncatedZeroInflatedModels2009].
-We modeled the binomial process as dependent on plantation age, hypothesizing that younger plantations exhibit more cells without wildlings than would be predicted under a constant rate of colonization due to the stochasticity of the colonization process.
-We also modeled the binomial process as dependent on locality, since...
-Structural zeros [MEE ref]
-Locality was specified as a varying effect.
-We used standardized variables (except ecosystem types, which were [0,1]) and fitted models with the glmmTMB package [version 1.0, @brooksGlmmTMBBalancesSpeed2017] in R [version 3.6, @rcoreteamLanguageEnvironmentStatistical2020].
-For each species we dropped ecosystem types that did not coincide with a single wildling (to avoid model convergence issues stemming from complete separation) and selected a model by the following procedure.
-First, we assessed which of our two variables of seed deposition density better accounted for numbers of wildlings (as judged by AIC of parallel models without zero inflation) and discarded the other.
+Accordingly, we applied zero-inflated generalized linear models, which model zeros as the mixed product of a binomial process and a conditional count process.
+We modeled the binomial process as dependent on plantation age and locality. 
+We expected that younger plantations would exhibit more cells without wildlings than predicted under a constant rate of colonization, because of their infertile juvenile period.
+We also expected the frequency of zeros to vary with locality, because our field work documented that some land owners had occasionally made efforts to remove wildlings.
+Excess zeros that arose in these ways would therefore not bias our estimates of establishment probability [@blasco-morenoWhatDoesZero2019].
+To summarize, we modeled:
 
 \begin{equation}
 wildings_{ij} \sim ZINB(\pi_{ij}, \mu_{ij}, \phi) \\
 logit(\pi_{ij}) = PlantationAge_{ij} + Locality_{ij} \\
-log(\mu_{ij}) = SeedDensity_{ij} \cdot PlantationAge_{ij} + Bio1_{ij} + Bio19_{ij} + RelativeElevation_{ij} + Locality_{i} + \sum\limits_{k=1}^K EcosystemType_{ijk} \\
+log(\mu_{ij}) = SeedDeposition_{ij} \cdot PlantationAge_{ij} + Bio1_{ij} + Bio19_{ij} + RelativeElevation_{ij} + Locality_{i} + \sum\limits_{k=1}^K EcosystemType_{ijk} \\
 Locality_{i} \sim Normal(0, \sigma^2) \\
 (\#eq:statmod)
 \end{equation}
@@ -200,9 +200,16 @@ Locality_{i} \sim Normal(0, \sigma^2) \\
 where $\pi$ is the probability of a zero from the binomial process, while $\mu$ and $\phi$ are the mean and dispersion of the negative binomial distribution, respectively [eq. 11.21 in @zuurZeroTruncatedZeroInflatedModels2009]. 
 Subscripts $i$, $j$, and $k$ index localities, cells, and ecosystem types.
 
+We used standardized variables (except ecosystem types, which were [0,1]) and fitted models with the glmmTMB package [version 1.0, @brooksGlmmTMBBalancesSpeed2017] in R [version 3.6, @rcoreteamLanguageEnvironmentStatistical2020].
+For each species we dropped ecosystem types that did not coincide with a single wildling (to avoid model convergence issues stemming from complete separation).
+We fitted two parallel models from our two seed deposition variables and selected the model with the better AIC.
+To catch problems with our model specification, we looked for...
+
+
+
 # Results
 
-The total, unstratified density of wildings was 28/ha for Sitka/Lutz spruce, 6/ha for Norway spruce, 13/ha for larch, and 34/ha for lodgepole pine.
+The total, unstratified density of wildings in our data set was 28/ha for Sitka/Lutz spruce, 6/ha for Norway spruce, 13/ha for larch, and 34/ha for lodgepole pine.
 
 ```{r relative establishment, fig.cap="Ecosystem types without wildlings and covering less than 0.5 ha across the species data set are not displayed."}
 knitr::include_graphics(here('ms', 'figures', 'relative-establishment.pdf'))
@@ -221,7 +228,7 @@ Advantage:
 Compared to tallying analysis, we see that the magnitudes of differences between ecosystem types is much larger. For management the difference between a ten-fold gap and a 1000-fold gap matters --- and may draw more attention to plantation surroundings.
 
 Limitation:
-Spatial grain. Minimum polygon area NiN, wildling group locations. A good reason to use a relatively course observation units (100 m2) and to perform fuzzy coding of ecosystem types.
+Spatial grain. Minimum polygon area NiN, wildling group locations. A good reason to use a relatively course observation units (100 m2) and to perform fuzzy coding of ecosystem types. Did our best to represent ecotones in the models and not use polygon boundaries overconfidently.
 
 Limitation:
 WALD model of seed deposition fits patterns of *establishment* better than ExP, but we cannot strictly test if it was a better descriptor of seed dispersal specifically. See different definitions of seed dispersal kernel in Nathan. What processes other than dispersal could give WALD a better fit to establishment than ExP?   
