--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -124,6 +124,23 @@
   pmid = {21601306}
 }
 
+@article{blasco-morenoWhatDoesZero2019,
+  title = {{What does a zero mean? Understanding false, random and structural zeros in ecology}},
+  shorttitle = {{What does a zero mean?}},
+  author = {Blasco-Moreno, Anabel and P{\'e}rez-Casany, Marta and Puig, Pedro and Morante, Maria and Castells, Eva},
+  year = {2019},
+  volume = {10},
+  pages = {949--959},
+  issn = {2041-210X},
+  doi = {10.1111/2041-210X.13185},
+  copyright = {\textcopyright{} 2019 The Authors. Methods in Ecology and Evolution \textcopyright{} 2019 British Ecological Society},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Blasco‐Moreno et al. - 2019 - What does a zero mean Understanding false, random.pdf},
+  journal = {Methods in Ecology and Evolution},
+  keywords = {statistics,zero inflation},
+  language = {ca},
+  number = {7}
+}
+
 @article{bohrerEffectsCanopyHeterogeneity2008,
   title = {Effects of Canopy Heterogeneity, Seed Abscission and Inertia on Wind-Driven Dispersal Kernels of Tree Seeds},
   author = {Bohrer, Gil and Katul, Gabriel G. and Nathan, Ran and Walko, Robert L. and Avissar, Roni},
